--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: Taufiq
 email: taufiqmmhd@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hello here's a blog of me and all I do!
-baseurl: "/blog" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/fp3-blog" # the subpath of your site, e.g. /blog
+url: "taufiqmmhd.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: taufiqmmhd
 github_username:  taufiqmmhd
 
